ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
	char NOME_ARQUIVO[51];
	char MD5[33];
} TECFArquivo;

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_GetMD5(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_GetNome(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_SetMD5(const INTPTR aacHandle, const PCHAR buffer);

DllImport int AAC_IdentPaf_ArquivoListaAutenticados_SetNome(const INTPTR aacHandle, const PCHAR buffer);

DllImport int AAC_IdentPaf_GetNumeroLaudo(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_GetVersaoER(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_OutrosArquivos_Clear(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_OutrosArquivos_Count(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_OutrosArquivos_Get(const INTPTR aacHandle, TECFArquivo* ecfArquivo, const int index);

DllImport int AAC_IdentPaf_OutrosArquivos_New(const INTPTR aacHandle, const TECFArquivo ecfArquivo);

DllImport int AAC_IdentPaf_Paf_GetDAVConfAnexoII(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVECF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVNaoFiscal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaDAVOS(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRealizaPreVenda(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_SetDAVConfAnexoII(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVECF(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVNaoFiscal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaDAVOS(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRealizaPreVenda(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_SetNumeroLaudo(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_IdentPaf_SetVersaoER(const INTPTR aacHandle, const PCHAR razaoSocial);